Removed a large amount of terrible redundant code.